--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.thymeleaf.suffix=.html
 #DB(MySQL)接続情報
 spring.datasource.url=jdbc:mysql://localhost/spring_dev
 spring.datasource.username=devuser01
-spring.datasource.password=Zc405289
+spring.datasource.password=Zc&405289
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto = update
