deprecated setting [javax.persistenceの修正

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,4 +71,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
+spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
 
